{
    "name": "Controls",
    "maps": [
        {
            "name": "MenuControl",
            "id": "c00b29cb-c110-4817-a404-9bbcc0a63a9d",
            "actions": [
                {
                    "name": "GoGame",
                    "type": "Button",
                    "id": "942d5838-5164-42af-952b-800f4d16dc31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a23e77ee-e743-44ab-8847-3e4998fd91bf",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "TutoControl",
            "id": "f02f35db-fcf3-4a4a-b283-f54d4531b8b4",
            "actions": [
                {
                    "name": "continue",
                    "type": "Button",
                    "id": "0520a8fc-ef3e-4dbb-a2d0-904adc0aae45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9829a49a-a005-4e04-a63e-1cd4fb97ed70",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainControl",
            "id": "ddd0126d-7e04-4f43-9809-eefc26ca5aba",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "1a56bb73-0406-4194-9e9b-b9b2dd0bb0f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0b20bf70-f9c2-4a54-9d74-0f0d753b796d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "SpinAndDetachAnticlockwise",
                    "type": "Button",
                    "id": "029cd7ec-f0bd-4a8e-904a-ac31f739414b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "SpinAndDetachClockwise",
                    "type": "Button",
                    "id": "5b16dfac-ee9e-4d26-b6cb-34337fd007c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "GoMenu",
                    "type": "Button",
                    "id": "8a1948e4-ce65-47c6-bfd1-dda2e0681be9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "7480fb76-3a57-448a-be06-629ac253709f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "a9a16b68-c092-4c26-9963-73e1b9518730",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "095b1af2-b359-47fb-a33a-f85e7cafa790",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "ac7e34ab-1520-45ce-b61c-82dafb001eca",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "e9f4392e-8100-4542-9eba-b63a05b13bdc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d129d51d-de6a-4f48-bb85-5ddb1521be2d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d10cc7d-c8c8-40d7-b478-b0ca5001ca61",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpinAndDetachClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b128a162-0dbd-45d3-b169-4b779d39049f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpinAndDetachAnticlockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "077909b5-9827-4978-a933-92a106309e7f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HeadControl",
            "id": "8e532b2f-477c-4d74-b10e-9a878079b114",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "2d92924b-2978-4d07-a0ad-945618ba42be",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoMain",
                    "type": "Button",
                    "id": "b51b7a20-3162-42d5-9a1b-7d754bb2ad4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "GoBody",
                    "type": "Button",
                    "id": "23ae5f08-938b-48a6-99e1-8eebca96977b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "CutJoin",
                    "type": "Button",
                    "id": "44fff4b9-e1ae-450e-b7fc-0115844db437",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "AxisJoin",
                    "type": "Value",
                    "id": "c1ffa276-8aef-4010-8685-5073a8395757",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoMenu",
                    "type": "Button",
                    "id": "9cb0df28-7cc3-4ea3-8482-9c883da65c89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "a7bc2f5e-ebe6-4ae0-9f49-e23844f28860",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "bd2bfedc-802c-4e34-a87f-77589896c87a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "36ca7bc4-4fde-4551-af70-b3422d30d0ec",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "1471ac2e-ec78-4769-ac59-cc44342cfad6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "c19c0e94-f19c-4e8a-9a76-77ef5a9830bd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up",
                    "id": "3d18720b-c73a-491f-a819-05acc3fc485f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "bc61a1a9-4774-48b3-8102-62f2c9fb5c51",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "ba6dbfcc-ff2b-4dc5-b352-c4bd938b1848",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "4807bb3b-19dd-44e1-ad4a-3c50f5082b2f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "69a142f4-06b2-4cc9-a091-979d6ffb3248",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up",
                    "id": "9f1b214e-2923-4842-b232-9ef24cdffa86",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "c007bb3f-e947-4384-9b3f-2953dd9a30b4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "77fd66fd-eabb-4185-a6be-fe8d8172de19",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "b1c4df76-c99f-46b3-a9eb-0c33afe97245",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "a7ae4e96-9b9d-4f14-95a6-dbe843740d85",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up",
                    "id": "4efbc9f7-9193-4645-b0b6-114120155e15",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "85cb27b1-41fd-488d-a5eb-0e99ba4c204d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "05a90727-ceef-4c8c-b268-d0d888279058",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "f060bd95-ce9f-4e3b-855b-a1ec143079f1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "00cce799-652d-4ff4-90cf-4622c6a1f79e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up",
                    "id": "0b7fcd0f-121c-4f96-8244-33f9b357bb5c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8214d561-8803-4ef2-8559-c12bfb070139",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoMain",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5628b626-a7c1-4133-8727-f9834df58923",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoBody",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f548ce2-158e-42dd-9456-ffbe696d904b",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CutJoin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "36f19d11-cdf2-4d63-a569-1788cb33e726",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisJoin",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bb18edca-1c11-4cbb-bc6d-6e24922658d8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisJoin",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "285b1e7a-c21b-4bc7-9fee-a823b98db309",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AxisJoin",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b350d8eb-aa74-402b-be18-0cf24394fe6f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BodyControl",
            "id": "54c1e496-f096-4b15-a4e9-4e4236962cc7",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "e4153a42-a0aa-4cbf-ab14-2633fcf2b0ce",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoHead",
                    "type": "Button",
                    "id": "0395ec2f-baca-4dc5-8f32-3d8d8b1cff07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "GoMenu",
                    "type": "Button",
                    "id": "9da9d82e-6ad1-4e28-87c4-f140d6409a8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e4575378-dbdf-45e1-bbda-4d9fe300e69d",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoHead",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c19430f-7f37-4565-bc21-ef57b1ab8c8e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "3c782cac-6186-464c-abe1-976c16f61a89",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "31de5a9e-1a72-4650-8a62-3c3329f2a0c6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "e5d806a1-2f21-4bff-852e-701034d7abe8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "1b0750d0-9c55-4c3e-a4b0-d2d45488d6d3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "a234d192-3272-4168-acea-f6917530357d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ByeControl",
            "id": "1512f049-1274-4375-9f27-ae6af39acb0a",
            "actions": [
                {
                    "name": "asd",
                    "type": "Value",
                    "id": "cf37df25-1899-4dc3-ba06-2c439442c3a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d7551192-03ae-4fcd-9f63-6e961451742b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "asd",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Empty",
            "id": "5bad51e7-86ed-4bd1-a0ec-fcd87b87924d",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}